--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "preview": "node scripts/preview.mjs",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
